playground/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: massip.amnay.fr
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: motd-service
            port: 
              number: 80
  ingressClassName: nginx
